# SummerEngine

./: .gitignore  CMakeLists.txt  README.md
SummerEngine/: CMakeLists.txt  ShaderUtils.h  SummerEngine.h
modules/: FindGLEW.cmake  FindGLM.cmake  FindSDL2.cmake
src/: CMakeLists.txt  FragmentShader.glsl  ShaderUtils.cpp  VertexShader.glsl  main.cpp
